fix node modules import

--- a/src/sass/utilities/_typography.sass
+++ b/src/sass/utilities/_typography.sass
@@ -1,4 +1,4 @@
-@import 'modularscale-sass/stylesheets/modularscale'
+@import '~modularscale-sass/stylesheets/_modularscale.scss'
 
 $type-ratio: 1.067 !default
 $type-base: 20 !default
