add position absolute and relative utility classes

--- a/src/sass/utilities/_layout.sass
+++ b/src/sass/utilities/_layout.sass
@@ -22,6 +22,10 @@
 
   .#{$class}sticky
     position: sticky
+  .#{$class}relative
+    position: relative
+  .#{$class}absolute
+    position: absolute
 
   .#{$class}overflow\=hidden
     overflow: hidden
