:building_construction: using lists to have more flexible margins and paddings

--- a/src/sass/globals/_defaults.sass
+++ b/src/sass/globals/_defaults.sass
@@ -67,3 +67,6 @@ $color-transition-delay: 0.2s
 // print settings
 $print-color: ( 'fg': #000, 'bg': #fff, 'accent': #000) !default
 $print-margin: 25mm
+
+$margin-sizes: -1, 0, 1, 2, 3, 4, 5, 6 !default
+$padding-sizes: $margin-sizes !default
