--- a/src/sass/utilities/_forms.sass
+++ b/src/sass/utilities/_forms.sass
@@ -142,6 +142,7 @@ select
   appearance: none
   -moz-appearance: none
   -webkit-appearance: none
+  box-sizing: content-box
   option
     font-size: $text-base-fontsize
 
