--- a/src/sass/globals/_minireset.sass
+++ b/src/sass/globals/_minireset.sass
@@ -51,7 +51,7 @@ select
   border-color: map-get($text-color, 'fg')
 
 *:focus
-  outline: map-get($text-color, 'fg') dashed $focus-outline-width
+  outline: rgba(map-get($text-color, 'fg'), .3) solid $focus-outline-width
   outline-offset: $focus-outline-offset
   position: relative
   transition: transform $color-transition-delay ease, opacity $color-transition-delay ease, color $color-transition-delay ease, background-color $color-transition-delay ease, border-color $color-transition-delay ease
