--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -105,7 +105,9 @@ select.arrow-down
     border-color: $fg
     transition: color $color-transition-delay ease, background-color $color-transition-delay ease, border-color $color-transition-delay ease
     & *:focus
-      outline: rgba($fg, .3) solid $focus-outline-width
+      // outline: rgba($fg, .3) solid $focus-outline-width
+      box-shadow: 0px 0px 4px 2px rgba($fg, .3)
+
     a
       color: map-get($palette, 'accent')
     &.arrow-down,
@@ -126,7 +128,8 @@ select.arrow-down
     border-color: $fg
     transition: color $color-transition-delay ease, background-color $color-transition-delay ease, border-color $color-transition-delay ease
     & *:focus
-      outline: rgba($fg, .3) solid $focus-outline-width
+      // outline: rgba($fg, .3) solid $focus-outline-width
+      box-shadow: 0px 0px 4px 2px rgba($fg, .3)
     a
       color: map-get($palette, 'accent')
     &.arrow-down
@@ -142,7 +145,8 @@ select.arrow-down
     background-color: $bg
     border-color: $fg
     & *:focus
-      outline: rgba($fg, .3) solid $focus-outline-width
+      // outline: rgba($fg, .3) solid $focus-outline-width
+      box-shadow: 0px 0px 4px 2px rgba($fg, .3)
     a
       color: map-get($palette, 'accent')
     &.arrow-down
