--- a/docs/css/print.css
+++ b/docs/css/print.css
@@ -36,7 +36,7 @@ select.arrow-down {
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1rem;
-  line-height: line-height(0);
+  line-height: 1.125rem;
 }
 
 .bold {
