--- a/src/sass/docs.sass
+++ b/src/sass/docs.sass
@@ -1,8 +1,12 @@
 @font-face
   font-family: 'Inter'
-  font-style: normal
-  font-weight: 400
   src: url(../fonts/inter/Inter-Regular.woff2) format('woff2')
+
+@font-face
+  font-family: 'Inter'
+  src: url(../fonts/inter/Inter-SemiBold.woff2) format('woff2')
+  font-weight: 600
+
 
 $text-size-lower-bound-px: 16
 $text-size-upper-bound-px: 20
@@ -10,7 +14,7 @@ $text-size-upper-bound-px: 20
 $rem-grow-start-px: 500
 $rem-grow-end-px: 1200
 
-$text-leading: 1.5
+$text-leading: 1.8
 
 $unit: $text-leading * 0.5rem
 $head-leading: $text-leading
@@ -28,9 +32,9 @@ $hunit: $optical-compensation * $unit
 // background and accent. variants are generated on the fly
 
 $variant-diff: 8%
-$text-color: ( 'fg': #444, 'bg': #fff, 'accent': #555)
+$text-color: ( 'fg': #000, 'bg': #fff, 'accent': #000)
 $primary-color: ( 'fg': #fff, 'bg': #000, 'accent': #fff)
-$secondary-color: ( 'fg': #fff, 'bg': #3DC18E, 'accent': #fff)
+$secondary-color: ( 'fg': #fff, 'bg': #37A7C5, 'accent': #fff)
 $tertiary-color: ( 'fg': #fff, 'bg': #154150, 'accent': #fff)
 $error-color: ( 'fg': #fff, 'bg': #B03040, 'accent': #fff)
 
@@ -50,7 +54,7 @@ $breadcrumbs-spacer: '/'
 $text-base-fontsize: $unit * 2 / $text-leading
 $head-base-fontsize: $unit * 2 / $head-leading
 
-$site-width-px: 900
+$site-width-px: 1024
 $phone2tablet-px: 600
 $tablet2laptop-px: 900
 $laptop2desktop-px: 1500
@@ -70,4 +74,19 @@ $color-transition-delay: 0.2s
 $print-color: ( 'fg': #000, 'bg': #fff, 'accent': #000)
 $print-margin: 25mm
 
+$margin-sizes: -0.5, 0, 1, 1.5, 2, 2.5, 3, 3.5
+$padding-sizes: 0, 0, 0.75, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 7, 8, 9, 10 ,11, 12, 13, 14
+
+$arrow-down: "<svg xmlns='http://www.w3.org/2000/svg' width='#{$hunit*0.66}' height='#{$unit}' viewBox='0 0 9.4 6.5'><path fill='$fill-color' d='M5.4 6.5H4l-4-5L.7 0h8l.7 1.5-4 5zM2.6 1.8l2.1 2.7 2.1-2.7H2.6z'/></svg>"
+
 @import './bedrock'
+
+.logo
+  margin-left: -36px
+  top: 9px
+
+// .doccontents__main
+//   max-width: 
+
+// aside
+//   max-width: $site-width-px - $paragraph-length
