:art: initial mustache docs

--- a/src/sass/docs.sass
+++ b/src/sass/docs.sass
@@ -75,7 +75,7 @@ $print-color: ( 'fg': #000, 'bg': #fff, 'accent': #000)
 $print-margin: 25mm
 
 $margin-sizes: -0.5, 0, 1, 1.5, 2, 2.5, 3, 3.5
-$padding-sizes: 0, 0, 0.75, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 7, 8, 9, 10 ,11, 12, 13, 14
+$padding-sizes: 0, 0, 0.75, 1.5, 2, 2.5, 3, 6
 
 $arrow-down: "<svg xmlns='http://www.w3.org/2000/svg' width='#{$hunit*0.66}' height='#{$unit}' viewBox='0 0 9.4 6.5'><path fill='$fill-color' d='M5.4 6.5H4l-4-5L.7 0h8l.7 1.5-4 5zM2.6 1.8l2.1 2.7 2.1-2.7H2.6z'/></svg>"
 
