--- a/docs/index.mustache
+++ b/docs/index.mustache
@@ -99,7 +99,7 @@
               {{#examples.length}}
                 <p class="mt=2">Further examples:
                 <figure class="table">
-                  <table>
+                  <table class="w=full">
                     {{#examples}}
                       <tr class="bb">
                         <td><code>{{code}}</code></td>
@@ -126,11 +126,11 @@
                 {{#examples.length}}
                   <p class="mt=2">Further examples:
                   <figure class="table">
-                    <table>
+                    <table class="w=full">
                       {{#examples}}
                         <tr class="bb">
                           <td><code>{{code}}</code></td>
-                          <td>{{{description}}}
+                          <td>{{{description}}}</td>
                         </tr>
                       {{/examples}}
                     </table>
@@ -150,443 +150,6 @@
           </div>
         </div>
       {{/chapters}}
-
-
-    <div class="text-align=c">✯</div>
-
-
-    <a name="borders"></a>
-    <h3>Borders</h3>
-    <p>Borders are set with the following utility classes:
-    <figure class="table">
-        <table>
-            <tr>
-                <td><code><&zwj;div class="b">...</code></td>
-                <td>borders on all sides</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="bx">...</code></td>
-                <td>left and right borders</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="by">...</code></td>
-                <td>top and bottom borders borders</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="bt">...</code></td>
-                <td>top border</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="bb">...</code></td>
-                <td>bottom border</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="bl">...</code></td>
-                <td>left border</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="br">...</code></td>
-                <td>right border</td>
-            </tr>
-        </table>
-    </figure>
-    <p class="mt=1">Corners can be rounded with these classes:
-
-    <figure class="table">
-        <table>
-            <tr>
-                <td><code><&zwj;div class="r">...</code></td>
-                <td>rounded on all sides</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="rl">...</code></td>
-                <td>rounded on the left side</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="rr">...</code></td>
-                <td>rounded on the left side</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="rt">...</code></td>
-                <td>rounded on the top side</td>
-            </tr>
-            <tr>
-                <td><code><&zwj;div class="rb">...</code></td>
-                <td>rounded on the bottom side</td>
-            </tr>
-        </table>
-    </figure>
-
-    <p class="mt=1">Big radii to create circles or pill like shapes can be created with `r-circle`. Of course, die modified classes `rl-circle`, `rr-circle`, `rt-circle` and `rb-circle` to restrict the radius to the left, right, top or bottom are also avaiable.
-
-    <p class="mt=1">For example, a button group could look like this:</p>
-    <textarea data-target="button-group-example" class="p=1 prototype" rows="3"><button class="px=1 rl c=sec-alt">Foo</button>
-<button class="px=1 rr c=sec-alt">Bar</button>
-<button class="r-circle px=4 c=prim">baz</button></textarea>
-    <div class="py=1" id="button-group-example"></div>
-
-    The style of the border can be controlled with the <code>$border-radius</code> and <code>$border-width</code> variables.
-    <div class="text-align=c">✯</div>
-
-    <a name="tables"></a>
-    <h3>Tables</h3>
-    <p>To apply the bedrock table styling, just wrap the table in a figure with the class <code>table</code>.
-    <p>For example,
-    <textarea data-target="table-example-1" class="py=1 prototype p=1">
-<figure class="table">
-  <table>
-    <thead>
-      <tr>
-        <th>Foo</th>
-        <th>Bar</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>baz</td>
-        <td>qux</td>
-      </tr>
-    </tbody>
-  </table>
-</figure></textarea>
-renders to
-  <div id="table-example-1" class=" my=1"></div>
-
-<p>If the display is to small for the table, it's set to scroll. <code>td</code>s with numeric data (and the <code>th</code> of the column) should get the class <code>numeric</code>. This enables tabular numbers and appropriate alignment.
-<p>Its consired good style to align numbers on the decimal point. Since there is no build in solution for that in the css spec, bedrock provides a few helper classes. To use them, the positions after the dot have be wrapped in a span with the class <code>dec-pos-align</code> or <code>dec-pos-align-wide</code>.
-<p class="mt=1">Example:
-    <textarea data-target="table-example-2" class="prototype"><figure class="table">
-  <table>
-    <thead>
-      <tr>
-        <th class="numeric">No</th>
-        <th>Name</th>
-        <th class="numeric">Weight</th>
-        <th>Symbol</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="numeric">1</td>
-        <td>Hydrogen</td>
-        <td class="numeric">1.<span class="dec-pos-align-wide">0079</span></td>
-        <td>H</td>
-      </tr>
-      <tr>
-        <td class="numeric">2</td>
-        <td>Helium</td>
-        <td class="numeric">4.<span class="dec-pos-align-wide">0026</span></td>
-        <td>He</td>
-      </tr>
-      <tr>
-        <td class="numeric">3</td>
-        <td>Lithium</td>
-        <td class="numeric">6.<span class="dec-pos-align-wide">941</span></td>
-        <td>Li</td>
-      </tr>
-      <tr>
-        <td class="numeric">4</td>
-        <td>Beryllium</td>
-        <td class="numeric">9.<span class="dec-pos-align-wide">0122</span></td>
-        <td>Be</td>
-      </tr>
-      <tr>
-        <td class="numeric">5</td>
-        <td>Boron</td>
-        <td class="numeric">10.<span class="dec-pos-align-wide">811</span></td>
-        <td>B</td>
-      </tr>
-    </tbody>
-  </table>
-</figure></textarea>
-
-    <div class="py=1" id="table-example-2"></div>
-
-    <a name="placeholder"></a>
-    <h2 class="head-xl text-align=c  mt=4">Placeholder</h2>
-    <p>This is just a small utility that fills up html elements with word-like shapes. This enables quick tests how different content flows. Also, it is more distinct from actual content than the typical lorum ipsum placeholders and less likely to be overlooked in the final product.
-    <p class="mt=1">Examples:
-    <figure class="code"><pre><&zwj;span class="head-l placeholder" wordcount="5"><&zwj;/span></pre></figure>
-    <span class="head-xl placeholder" wordcount="5"></span>
-    <figure class="code"><pre><&zwj;span class="placeholder" wordcount="20"><&zwj;/span></pre></figure>
-    <span class="placeholder" wordcount="20"></span>
-
-    <a name="interactive"></a>
-    <h2 class="head-xl text-align=c mt=2">Interactive Elements</h2>
-    <h3 class="head-l text-align=c">Accordion</h3>
-
-    The Accordion element is based on the html details element. Multiple details must be wrapped in a container with class <code>accordion</code>.
-
-    <p class="pt=1">Example:
-
-    <figure class="code">
-      <pre>
-<div class="accordion my=2 b r">
-    <details>
-        <div class="placeholder p=1" wordcount=4></summary>
-        <div class="placeholder p=1" wordcount=4></div>
-    </details>
-    <details>
-        <summary class="p=1 bt">Click here b</summary>
-        <div class="placeholder px=1 pb=1" wordcount=30></div>
-    </details>
-</div></pre>
-    </figure>
-
-    <div class="accordion my=2">
-        <details class="b rt">
-            <summary class="placeholder p=1" wordcount=4></summary>
-            <div class="placeholder px=1 pb=1" wordcount=50></div>
-        </details>
-        <details class="bb bx rb">
-            <summary class="placeholder p=1" wordcount=3></summary>
-            <div class="placeholder px=1 pb=1" wordcount=30></div>
-        </details>
-    </div>
-
-    <a name="responsive_design"></a>
-    <h3>Responsive Design</h3>
-    <p>Bedrocks tools for responsive design are build upon the mobile first principle. Per default, there are four device classes, sm(phones), md(tablets, phones in landscape), lg(laptop, small desktops), xl(normal desktop, external screens).
-    Mobile first means that we start with the mobile styling and add more rules as the screen size grows. To do that there are modified versions of a lot of utility classes (mostly everything that has to do with layout and size).
-
-    <p class="pt=1">For example, a element with the classes <code>mt=1 lg:mt=2 xl:mt=3</code> has one unit margin on all phones and tablets, margin two on screens classed as lg and margin three on screens classed xl.
-    <p>In general, everything that has to do with layout and spacing is prefixed.
-    <div class="text-align=c">✯</div>
-
-    <a name="flex-grid"></a>
-    <h3>Flexbox utils and the Flex Grid</h3>
-    <p>
-
-    <div class="text-align=c">✯</div>
-
-
-    <a name="forms"></a>
-    <h3>Forms</h3>
-    <textarea data-target="form-example-1" class="py=1 prototype p=1"><form id="person">
-    <label for="first_name">First Name</label>
-    <input type="text" name="first_name" id="first_name" maxlength="30">
-
-    <label for="name">Name</label>
-    <input type="text" name="name" id="name" maxlength="30">
-
-    <div class="floating-label mt=1">
-        <input type="text" placeholder=" " />
-        <label>floaty labels</label>
-    </div>
-    <div class="floating-label mt=1">
-        <input type="text" placeholder=" " />
-        <label>for more tightly stacked forms</label>
-    </div>
-    <button type="reset" class="c=err mt=1">Eingaben zurücksetzen</button>
-    <button type="submit" class="c=prim mt=1">Eingaben absenden</button>
-</textarea>
-renders to
-  <div id="form-example-1" class=" my=1"></div>
-  <p>One important note for selects: The class <code>arrow-down</code> has to be set explictly. In return, this decorator class can be used everywhere (for example in drop down buttons) and is compatible with all colors schemes, contextual variations and animations.
-<textarea data-target="form-example-2" class="py=1 prototype p=1">
-<select>
-    <option value="">-- without arrow --</option>
-    <option value="foo">Foo</option>
-    <option value="bar">Bar</option>
-</select>
-<select class="arrow-down">
-    <option value="">-- with arrow --</option>
-    <option value="foo">Foo</option>
-    <option value="bar">Bar</option>
-</select>
-<select class="c=prim arrow-down">
-    <option value="">-- with arrow and other color --</option>
-    <option value="foo">Foo</option>
-    <option value="bar">Bar</option>
-</select>
-<select class="c=sec hover:c=text-alt arrow-down">
-    <option value="">-- and hover effect --</option>
-    <option value="foo">Foo</option>
-    <option value="bar">Bar</option>
-</select></textarea>
-  <div id="form-example-2" class=" my=1"></div>
-    <p>Checkboxes and radiobuttons must be wrapped in a label and must contain an empty sibling element for technical reasons.
-    <p>Its important to <em>not</em> use a radio input with the toggle styling, since the behaviour would be surprising for the user.
-    <textarea data-target="switch-example-1" class="py=1 prototype p=1"><label class="check p=1 c=prim">
-  <input type="checkbox">
-  <span></span>
-  Label
-</label>
-<label class="check p=1">
-  <input type="radio" name="radio-example">
-  <span></span>
-  Foo
-</label>
-<label class="check p=1 pt=0">
-  <input type="radio" name="radio-example">
-  <span></span>
-  Bar
-</label>
-<label class="toggle p=1 c=sec">
-  <input type="checkbox">
-  <span></span>
-  Label
-</label>
-<label class="toggle p=1 c=text-alt">
-  <input type="checkbox">
-  <span></span>
-  Label
-</label></textarea>
-  <div id="switch-example-1" class=" my=1"></div>
-
-  <p>Addional styling can be added to the embedded span element like so:
-
-    <textarea data-target="switch-example-2" class="py=1 prototype p=1"><label class="toggle p=1 c=sec">
-  <input type="checkbox">
-  <span class="elevated"></span>
-  Label
-</label></textarea>
-  <div id="switch-example-2" class=" my=1"></div>
-
-    <div class="text-align=c">✯</div>
-
-    <a name="hover_and_focus"></a>
-    <h3>Contextual variations</h3>
-    <p>To create contextual variations, the color utility classes and the <code>elevated</code> class can be prefixed with <code>hover:</code> or <code>focus:</code>
-
-    <textarea data-target="contextual-color-example-1" class="py=1 prototype p=1"><div class="c=prim hover:c=sec">
-    Foo
-</div>
-<div class="hover:c=text-alt">
-    Bar
-</div>
-<div class="c=text-alt hover:c=text">
-    Baz
-</div>
-<div>
-    <input class="r mt=1 focus:elevated focus:c=text"/>
-</div>
-</textarea>
-    <div id="contextual-color-example-1" class=" my=1"></div>
-
-
-    <div class="text-align=c">✯</div>
-
-    <a name="aspect-ratio"></a>
-    <h3>Aspect Ratio</h3>
-    <p>To apply aspect ratio to an element. The element must be wrapped in a container with the class <code>ar=1/1 ar=16/9 ar=4/3</code>
-    <p>Also a mixin called <code>ar($width, $height)</code> is available to create custom ratios.
-
-    <textarea data-target="aspect-ratio-example-1" class="py=1 prototype p=1">
-        <div class="ar=16/9">
-            <div class="c=sec"></div>
-        </div>
-    </textarea>
-    <div id="aspect-ratio-example-1" class=" my=1"></div>
-
-    <a name="visibility"></a>
-    <h3>Visibility</h3>
-    <p>To hide or show an element, the visibility utility classes <code>visible</code> and <code>hidden</code> can be used. They can also be prefixed with the responsive prefixes
-
-    <textarea data-target="visibility-example-1" class="py=1 prototype p=1">
-        <div class="c=prim flex hidden md:visible lg:hidden xl:visible p=2"></div>
-    </textarea>
-    <div id="visibility-example-1" class=" my=1"></div>
-
-
-    <div class="text-align=c">✯</div>
-
-    <a name="icons"></a>
-    <h3>Icons</h3>
-    <p>We make use of inline SVGs for icons. Every SVG iconset can be integrated.
-
-    <a name="icon-sizes"></a>
-    <h4>Icon Sizes</h4>
-    <p>We defined Utility Classes for icon sizes analog to the headline sizes. <code>.icon, .icon-l, .icon-xl, .icon-2xl, .icon-3xl, .icon-4xl</code>. Those classes can be prefixed with our responsive prefixes
-
-    <div class="text-align=c">✯</div>
-
-    <a name="background-img"></a>
-    <h3>Background images</h3>
-    <p>If you want to use a big background image, for example for a hero banner, you can use the <code>bg-img</code> class. You can set the image url with the <code>data-url</code> attribute.
-    <p>The image is loaded after the page itself and will ease in. The idea is that non functional parts of the - site like a hero image - shouldn't impact the inital page load. So make sure that the background color of that element is set so that the page looks good even if the image never loads, which might happen to users on very bad connections.
-
-    <textarea class="py=1 prototype p=1">
-<div class="ar=4/3 w=1/2 c=text-alt bg-img" data-url="cat.jpg"></div></textarea>
-<p>(the interactive code preview does not work with this functionality)
-<div class="ar=4/3 w=1/2 c=text-alt bg-img" data-url="cat.jpg"></div>
-
-    <p>Per default, the image is centered. If there is a focal point in the image that is not the center, it can be specified with the <code>data-focal</code> attribute like so:
-    <textarea class="py=1 prototype p=1" rows="5"><div class="c=text-alt bg-img"
-  style="height: 300px; width: 200px;"
-  data-url="cat.jpg"
-  data-focal="15% 40%">
-</div></textarea>
-<div class="c=text-alt bg-img mt=1" style="height: 300px; width: 200px;" data-url="cat.jpg" data-focal="15% 40%"></div>
-
-    <a name="tabs"></a>
-
-    <textarea data-target="tabs-example-1" class="py=1 prototype p=1">
-      <div class="tabs">
-        <div role="tablist" aria-label="Entertainment">
-          <button role="tab"
-                  aria-selected="true"
-                  aria-controls="nils-tab"
-                  id="nils">
-            Nils Frahm
-          </button>
-          <button role="tab"
-                  aria-selected="false"
-                  aria-controls="agnes-tab"
-                  id="agnes"
-                  tabindex="-1">
-            Agnes Obel
-          </button>
-          <button role="tab"
-                  aria-selected="false"
-                  aria-controls="complexcomplex"
-                  id="complex"
-                  tabindex="-1"
-                  data-deletable="">
-            Joke
-          </button>
-        </div>
-        <div tabindex="0"
-            role="tabpanel"
-            id="nils-tab"
-            aria-labelledby="nils">
-          <p>
-            Nils Frahm is a German musician, composer and record producer based in Berlin. He is known for combining classical and electronic music and for an unconventional approach to the piano in which he mixes a grand piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and Moog Taurus.
-          </p>
-        </div>
-        <div tabindex="0"
-            role="tabpanel"
-            id="agnes-tab"
-            aria-labelledby="agnes"
-            hidden="">
-          <p>
-            Agnes Caroline Thaarup Obel is a Danish singer/songwriter. Her first album, Philharmonics, was released by PIAS Recordings on 4 October 2010 in Europe. Philharmonics was certified gold in June 2011 by the Belgian Entertainment Association (BEA) for sales of 10,000 Copies.
-          </p>
-        </div>
-        <div tabindex="0"
-            role="tabpanel"
-            id="complexcomplex"
-            aria-labelledby="complex"
-            hidden="">
-          <p>
-            Fear of complicated buildings:
-          </p>
-          <p>
-            A complex complex complex.
-          </p>
-        </div>
-      </div>
-    </textarea>
-    <div id="tabs-example-1" class=" my=1"></div>
-
-
-
-
-    <a name="print_styles"></a>
-    <h3>print.css</h3>
-    <p>When you put <code><link rel="stylesheet" media="print" href="path/to/print.min.css"></code> in your html header, you get a print friendly restyling. Headers and footers are automaticly hidden, the page width class is a full site and all colors are set to black and white (can be modifed with the <code>$print-color</code> variable). The page margins are set with the <code>$print-margin</code> variable.
-    <p>All layout and aspect ratio classes get an addional prefix <code>print:</code> to add print specific styling and you can hide and show elements with the <code>print-only</code> and <code>screen-only</code> utility classes.
-    <p>Also, external links will show their target in parenthesis after the link text.
   </div>
 </main>
 
