--- a/docs/index.mustache
+++ b/docs/index.mustache
@@ -48,7 +48,7 @@
                         aria-label="{{ name }}">
                           {{#level-2}}
                             <li role="none">
-                                <a role="menuitem" tabindex="-1" class="px=1 {{#level-3.length}}arrow-right{{/level-3.length}}" href="#{{slug}}">{{ name }}</a>
+                                <a role="menuitem" tabindex="-1" class="p=1 {{#level-3.length}}arrow-right{{/level-3.length}}" href="#{{slug}}">{{ name }}</a>
                                   {{#level-3.length}}
                                     <ul
                                     class="c=sec"
@@ -56,7 +56,7 @@
                                     aria-label="Utilities">
                                       {{#level-3}}
                                         <li role="none">
-                                            <a role="menuitem" tabindex="-1" class="px=1" href="#{{slug}}">{{ name }}</a>
+                                            <a role="menuitem" tabindex="-1" class="p=1" href="#{{slug}}">{{ name }}</a>
 
                                         </li>
                                       {{/level-3}}
