--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -45,6 +45,7 @@ $arrow-up: "<svg xmlns='http://www.w3.org/2000/svg' width='#{$hunit}' height='#{
   background-color: $bg
   background-position: calc(100% - 8px) center
   background-repeat: no-repeat
+  background-size: $hunit $unit
 
 =bg_with_arrow_left($bg, $fg)
   $temp-fg: str-replace(#{$fg}, "#", "%23")
@@ -53,6 +54,7 @@ $arrow-up: "<svg xmlns='http://www.w3.org/2000/svg' width='#{$hunit}' height='#{
   background-color: $bg
   background-position: calc(100% - 8px) center
   background-repeat: no-repeat
+  background-size: $hunit $unit
 
 =bg_with_arrow_right($bg, $fg)
   $temp-fg: str-replace(#{$fg}, "#", "%23")
@@ -61,6 +63,7 @@ $arrow-up: "<svg xmlns='http://www.w3.org/2000/svg' width='#{$hunit}' height='#{
   background-color: $bg
   background-position: calc(100% - 8px) center
   background-repeat: no-repeat
+  background-size: $hunit $unit
 
 =bg_with_arrow_up($bg, $fg)
   $temp-fg: str-replace(#{$fg}, "#", "%23")
@@ -69,6 +72,7 @@ $arrow-up: "<svg xmlns='http://www.w3.org/2000/svg' width='#{$hunit}' height='#{
   background-color: $bg
   background-position: calc(100% - 8px) center
   background-repeat: no-repeat
+  background-size: $hunit $unit
 
 .arrow-down
   +bg_with_arrow_down(map-get($text-color, 'bg'), map-get($text-color, 'fg'))
