--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -112,7 +112,8 @@ select.arrow-down
       // outline: rgba($fg, .3) solid $focus-outline-width
       box-shadow: 0px 0px 4px 2px rgba($fg, .3)
 
-    a
+    & > a,
+    & *:not([class^='c\=']) a
       color: map-get($palette, 'accent')
     &.arrow-down
       +bg_with_arrow_down($bg, $fg)
