fix Width of Check- & Radio boxes #138

--- a/src/sass/utilities/_forms.sass
+++ b/src/sass/utilities/_forms.sass
@@ -10,6 +10,13 @@ button
 input, textarea, select
   width: 100%
 
+input[type="radio"],
+input[type="checkbox"],
+input[type="submit"]
+  width: auto
+  margin-right: 5px
+
+
 // floating labels
 .floating-label
   position: relative
