--- a/src/sass/globals/_colors.sass
+++ b/src/sass/globals/_colors.sass
@@ -118,8 +118,8 @@ select.arrow-down
       // outline: rgba($fg, .3) solid $focus-outline-width
       box-shadow: 0px 0px 4px 2px rgba($fg, .3)
 
-    & > a,
-    & *:not([class^='c\=']) a
+    & > a:not([class^='c\=']):not([class*=' c\=']),
+    & *:not([class^='c\=']):not([class*=' c\=']) > a:not([class^='c\=']):not([class*=' c\='])
       color: map-get($palette, 'accent')
     &.arrow-down
       +bg_with_arrow_down($bg, $fg)
@@ -137,7 +137,9 @@ select.arrow-down
     & *:focus
       // outline: rgba($fg, .3) solid $focus-outline-width
       box-shadow: 0px 0px 4px 2px rgba($fg, .3)
-    a
+
+    & > a:not([class^='c\=']):not([class*=' c\=']),
+    & *:not([class^='c\=']):not([class*=' c\=']) > a:not([class^='c\=']):not([class*=' c\='])
       color: map-get($palette, 'accent')
     &.arrow-down
       +bg_with_arrow_down($bg, $fg)
@@ -154,7 +156,9 @@ select.arrow-down
     & *:focus
       // outline: rgba($fg, .3) solid $focus-outline-width
       box-shadow: 0px 0px 4px 2px rgba($fg, .3)
-    a
+      
+    & > a:not([class^='c\=']):not([class*=' c\=']),
+    & *:not([class^='c\=']):not([class*=' c\=']) > a:not([class^='c\=']):not([class*=' c\='])
       color: map-get($palette, 'accent')
     &.arrow-down
       +bg_with_arrow_down($bg, $fg)
